--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "lint-l": "./node_modules/.bin/eslint --fix --color -o ./lint/report.html -f html \"./src/**/*.{ts,tsx,js,jsx}\""
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.5",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.1.3",
+    "@types/aos": "^3.0.4",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.26",
